--- a/unit_test.yml
+++ b/unit_test.yml
@@ -5,8 +5,8 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@main
+      - uses: actions/setup-node@main
         with:
           node-version: '14'
       - run: npm install -g bats
