--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -19,7 +19,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: $GITHUB_WORKSPACE
+      -uses: actions/checkout@master
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
